kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS:443"}]'
    alb.ingress.kubernetes.io/certificate-arn: ${ACM_CERT_ARN}
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - host: api.banking-domain.com
      http: 
        paths:
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 80
          - path: /transaction
            pathType: Prefic
            backend:
              service:
                name: transaction-servoce
                port: 
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service: 
                name: auth-service
                port: 
                  number: 80
